Version 0.9.5 released 2018-07-31

* Fix release build by including *.[ch] in Manifest.in
  https://github.com/xattr/xattr/pull/77

Version 0.9.4 released 2018-07-30

* Extract inline C code for syntax highlighting and easier maintenance
  https://github.com/xattr/xattr/pull/75
* Fix Travis build
  https://github.com/xattr/xattr/pull/74
* Always include sys/types.h (musl compatibility)
  https://github.com/xattr/xattr/pull/73

Version 0.9.3 released 2018-01-28

* Do not attempt to use surrogateescape unless it is available
  https://github.com/xattr/xattr/issues/59

Version 0.9.2 released 2017-04-02

* Fix BSD issue w/ lsattr and long attrs
  https://github.com/xattr/xattr/pull/57
* Remove unreachable code
  https://github.com/xattr/xattr/pull/56

Version 0.9.1 released 2016-10-23

* Allow (Python 2) long for fd
  https://github.com/xattr/xattr/pull/51
* Fix Python 3 bytes handling in xattr.tool
  https://github.com/xattr/xattr/pull/50
* Use cffi 1.X features to build native module for faster import
  https://github.com/xattr/xattr/pull/47
* NOTE: Version 0.9.0 is the same, was momentarily uploaded with
  incomplete CHANGES.txt

Version 0.8.0 released 2016-02-28

* Use os.fsencode where available to better handle filesystem quirks related
  to surrogates
  https://github.com/xattr/xattr/pull/46
* Options bugfix and compatibility module for pyxattr API
  https://github.com/xattr/xattr/pull/38

Version 0.7.9 released 2016-02-12

* Added xattr/tests/*.py to MANIFEST.in
  https://github.com/xattr/xattr/issues/43

Version 0.7.8 released 2015-06-25

* Added MANIFEST.in to ensure that the .txt files are included
  https://github.com/xattr/xattr/issues/40

Version 0.7.7 released 2015-06-19

* Fixed FreeBSD build
  https://github.com/xattr/xattr/pull/32

Version 0.7.6 released 2014-03-27

* Fixed Solaris & Solaris Studio support and Python 2.6 compatibility
  https://github.com/xattr/xattr/pull/29

Version 0.7.5 released 2014-03-23
