@@ -22,4 +22,12 @@ if [[ -n "$PYENV_VERSION" && $TRAVIS_OS_NAME == 'osx' ]]; then
 fi
 if [[ $BUILD_SDIST == 'true' ]]; then
     python setup.py sdist
+    mkdir -p tmp-build
+    cd tmp-build
+    tar zxvf ../dist/xattr-*.tar.gz
+    cd xattr-*
+    "$cmd" setup.py build_ext -i
+    "$cmd" setup.py test
+    cd ../..
+    rm -rf tmp-build
 fi
