@@ -2,6 +2,7 @@ Version 0.9.5 released 2018-07-31
 
 * Fix release build by including *.[ch] in Manifest.in
   https://github.com/xattr/xattr/pull/77
+  https://github.com/xattr/xattr/pull/78
 
 Version 0.9.4 released 2018-07-30
 
